example/secondfile/objects/Customer_Site_VASA_Response__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Site__c</fullName>
        <label>Customer Site</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>Customer Sites VASA Response</relationshipLabel>
        <relationshipName>Customer_Sites_VASA_Response</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Option_Group_Information__c</fullName>
        <label>Option Group Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Information__c</fullName>
        <label>Product Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VASA_Response__c</fullName>
        <label>VASA Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Customer Site VASA Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VASA-{0000}</displayFormat>
        <label>VASA Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sites VASA Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>